# stratagraph

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  SECURITY.md  TRADEMARK.md
apps/strata-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/strata-desktop/src-tauri/capabilities/: default.json
apps/strata-desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  subgraph.rs
crates/strata-cli/: Cargo.toml
crates/strata-cli/src/: lib.rs  main.rs  reload.rs
crates/strata-cli/src/init/: claude.rs  content.rs  kiro.rs  mod.rs  writers.rs
crates/strata-cli/tests/: cli.rs  estate_blast.rs  estate_detect_changes.rs  estate_e2e.rs  estate_member_reindex.rs  global_install.rs  hot_reload.rs  init.rs
crates/strata-contract/: Cargo.toml
crates/strata-contract/src/: consumer.rs  graphql.rs  grpc.rs  lib.rs  openapi.rs
crates/strata-contract/tests/: graphql.rs  graphql_ops.rs  grpc.rs  openapi.rs
crates/strata-contract/tests/fixtures/: legacy_service.proto  malformed.proto  no_operation_id.yaml  not_proto.proto  openapi_v3.yaml  ops_basic.graphql  ops_fragment.graphql  ops_multi.graphql  schema_appsync.graphql  schema_basic.graphql  schema_malformed.graphql  schema_renamed_roots.graphql  swagger_v2.json  types_only.proto  user_service.proto
crates/strata-data/: Cargo.toml
crates/strata-data/src/: lib.rs
crates/strata-index/: Cargo.toml
crates/strata-index/src/: build.rs  changes.rs  contract.rs  data.rs  differential.rs  estate.rs  estate_marker.rs  fs.rs  infra.rs  lib.rs  rename.rs  resolve_mode.rs  scip_merge.rs  stamp.rs  tsconfig.rs
crates/strata-index/tests/: accuracy_gate.rs  build_graph.rs  confidence_bands.rs  contract.rs  crossrepo_impact.rs  cs_extraction.rs  data_coverage.rs  data_linking.rs  detect_changes.rs  estate.rs  estate_api_collision.rs  estate_marker.rs  gen_scip.rs  graphql_coverage.rs  graphql_crossrepo_impact.rs  graphql_estate.rs  graphql_linking.rs  grpc_estate.rs  iam_grants.rs  incremental.rs  index_repo.rs  index_stamp.rs  infra_coverage.rs  infra_crossrepo_impact.rs  infra_linking.rs  link_estate.rs  mixed_lang.rs  openapi_linking.rs  py_accuracy_gate.rs  py_extraction.rs  rename.rs  resolve.rs  resolve_modes.rs  rust_accuracy_gate.rs  rust_extraction.rs  terraform_coverage.rs  terraform_index.rs  terraform_linking.rs  vendored.rs  within_repo_collision.rs
crates/strata-index/tests/fixtures/accuracy/async_hof/: index.scip  package.json  tsconfig.json
crates/strata-index/tests/fixtures/accuracy/cs/: Models.cs  Reflect.cs  Service.cs
crates/strata-index/tests/fixtures/crossrepo/: strata.workspace.toml
crates/strata-index/tests/fixtures/crossrepo_data/: .gitignore  strata.workspace.toml
crates/strata-index/tests/fixtures/crossrepo_graphql/: strata.workspace.toml
crates/strata-index/tests/fixtures/crossrepo_grpc/: strata.workspace.toml
crates/strata-index/tests/fixtures/crossrepo_infra/: strata.workspace.toml
crates/strata-index/tests/fixtures/crossrepo_r2/: strata.workspace.toml
crates/strata-index/tests/fixtures/dedup/: strata.workspace.toml
crates/strata-index/tests/fixtures/dedup_graphql/: strata.workspace.toml
crates/strata-index/tests/fixtures/dedup_graphql_undeclared/: strata.workspace.toml
crates/strata-index/tests/fixtures/dedup_undeclared/: .gitignore  strata.workspace.toml
crates/strata-index/tests/fixtures/estate/: strata.workspace.toml
crates/strata-index/tests/fixtures/estate_api_collision/: strata.workspace.toml
crates/strata-index/tests/fixtures/infra_appsync/: buildspec.yml  schema.graphql  template.yaml
crates/strata-index/tests/fixtures/infra_roles/: template.yaml
crates/strata-index/tests/fixtures/infra_subdir/: .gitignore
crates/strata-index/tests/fixtures/malformed_spec/: openapi.yaml  valid.yaml
crates/strata-index/tests/fixtures/monolith/: openapi.yaml
crates/strata-index/tests/fixtures/monolith_graphql/: schema.graphql
crates/strata-index/tests/fixtures/producer/: openapi.yaml  things-v1.yaml  things-v2.yaml
crates/strata-index/tests/fixtures/py_contract/: app.py  openapi.yaml  schema.graphql
crates/strata-index/tests/fixtures/resolve/: index.scip  package.json
crates/strata-index/tests/fixtures/terraform_appsync/: main.tf  schema.graphql
crates/strata-index/tests/fixtures/within_repo_collision/: billing.graphql
crates/strata-index/tests/support/: accuracy.rs
crates/strata-infra/: Cargo.toml
crates/strata-infra/src/: cfn.rs  iam.rs  lib.rs  terraform.rs  terragrunt.rs  tfplan.rs
crates/strata-infra/tests/: cfn.rs  terraform.rs
crates/strata-infra/tests/fixtures/: arbitrary.json  cfn_long_form.json  docker_compose.yml  malformed.yaml  not_a_template.yml  real_world.yaml  real_world_block_args.yaml  real_world_flow_if.yaml  sam_appsync.yaml  samconfig.toml  unresolved_refs.yaml
crates/strata-infra/tests/fixtures/terraform/: main.tf
crates/strata-lang-cs/: Cargo.toml
crates/strata-lang-cs/src/: analyze.rs  lib.rs  link.rs
crates/strata-lang-cs/tests/: extraction.rs  linking.rs
crates/strata-lang-py/: Cargo.toml
crates/strata-lang-py/src/: analyze.rs  lib.rs  link.rs
crates/strata-lang-py/tests/: contract_extraction.rs  extraction.rs  linking.rs
crates/strata-lang-rust/: Cargo.toml
crates/strata-lang-rust/src/: analyze.rs  lib.rs  link.rs
crates/strata-lang-rust/tests/: extraction.rs  linking.rs
crates/strata-lang-ts/: Cargo.toml
crates/strata-lang-ts/src/: analyze.rs  lib.rs  resolve.rs
crates/strata-lang-ts/tests/: extraction.rs  resolution.rs
crates/strata-mcp/: Cargo.toml
crates/strata-mcp/src/: lib.rs  resolve.rs  server.rs  tools.rs
crates/strata-scip/: Cargo.toml
crates/strata-scip/src/: error.rs  lib.rs  model.rs  resolver.rs  runner.rs
crates/strata-scip/tests/: resolver.rs  runner.rs
crates/strata-scip/tests/fixtures/sample/: index.scip  package.json
crates/strata-scip/tests/fixtures/unicode/: index.scip  package.json
crates/strata-store/: Cargo.toml
crates/strata-store/src/: lib.rs  store.rs
crates/strata-store/tests/: integration.rs
(+223 files in other folders)
