[workspace]
resolver = "2"
members = ["crates/*", "apps/strata-desktop/src-tauri"]

[workspace.package]
edition = "2021"
version = "0.1.0"
# Source available under the Functional Source License (converts to Apache-2.0 two
# years after each release). Not an OSI/SPDX identifier, so expressed as a LicenseRef;
# the authoritative text is LICENSE.md at the workspace root.
license = "LicenseRef-FSL-1.1-ALv2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
# `preserve_order` keeps JSON object key order on round-trip, so the init
# command's deep-merge writer preserves the byte order of foreign keys/servers
# and re-runs are byte-stable (idempotency).
serde_json = { version = "1", features = ["preserve_order"] }
