[package]
name = "strata-contract"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
strata-core = { path = "../strata-core" }
serde = { workspace = true }
serde_json = { workspace = true }
# Maintained YAML 1.2 parser. NOT serde_yaml (deprecated 0.9.34+deprecated) and
# NOT serde_yml (its 0.0.13 is itself a deprecated compatibility shim). yaml-rust2
# is actively maintained and yields an untyped `Yaml` value we walk directly,
# which suits the version-agnostic `paths` traversal (no typed schema needed).
yaml-rust2 = "0.11"
# Error-tolerant GraphQL CST parser, actively maintained by Apollo. Parses both
# SDL (type-system) and executable documents, tolerates AppSync `@aws_*`
# directives, and exposes syntax errors (so malformed input → ContractError::Parse
# rather than a silent partial extraction). De-risked before adoption; the
# fallback was async-graphql-parser. Confined to this crate (the contract plane).
apollo-parser = "0.8"
# Pure, IO-free protobuf `.proto` source parser: `parse(name, source) ->
# Result<FileDescriptorProto, ParseError>` — text in, descriptor out, no
# filesystem, with line:col diagnostics (so a malformed `.proto` →
# ContractError::Parse, never a partial extraction). De-risked before adoption;
# the rejected alternative was `protobuf-parse` (rust-protobuf), whose only public
# API is filesystem-based (include paths + input files), which would break the
# `ContractAdapter` pure-no-IO contract. Pinned exact. Confined to this crate.
protox-parse = "=0.9.0"
# Names `FileDescriptorProto` (the type `protox-parse::parse` returns). Version
# tracks protox-parse's own `prost-types` pin (0.14); a mismatch would be a
# distinct, incompatible type.
prost-types = "0.14"
thiserror = "1"
