[package]
name = "strata-lang-ts"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
strata-core = { path = "../strata-core" }
# Grammars are `=`-pinned (deliberate, reviewed bumps only): a tree-sitter minor
# can change the parse tree the analyzer matches against, so a float could silently
# shift extraction. Keep in lockstep with strata-index and re-check the corpora.
tree-sitter = "0.25.10"
tree-sitter-typescript = "=0.23.2"
tree-sitter-javascript = "=0.25.0"
