[package]
name = "strata-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
strata-core = { path = "../strata-core" }
duckdb = { version = "1", features = ["bundled"] }
thiserror = "1"
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
